compito g3 + piccole aggiunte compito g2

--- a/m1/s1/g2/compito/css/stylepost.css
+++ b/m1/s1/g2/compito/css/stylepost.css
@@ -107,6 +107,10 @@ table caption {
     font-weight: 700;
 }
 
+#tool {
+    color: blue;
+}
+
 iframe {
     display: block;
     margin: 30px auto;
