--- a/m1/s1/g3/css/style.css
+++ b/m1/s1/g3/css/style.css
@@ -6,8 +6,9 @@
 
 header {
     width: 100%;
-    height: 80px;
+    padding-top: 10px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -20,18 +21,16 @@ hr {
     width: 100%;
 }
 
-.linea-arancione {
-    height: 2px;
-    border: none;
-    background-color: yellow;
-}
-
 .slogan {
     height: 40px;
+    width: 100%;
+    padding: 15px 0;
+    margin-top: 10px;
     background-color: rgba(255, 213, 0, 0.295);
     display: flex;
     justify-content: center;
     align-items: center;
+    border-top: 3px solid yellow;
 }
 
 .slogan p {
@@ -84,6 +83,7 @@ video {
 
 .featured .p2 {
     color: teal;
+    text-decoration: underline;
 }
 
 h2 {
