--- a/m1/s1/progetto/desktop/css/style.css
+++ b/m1/s1/progetto/desktop/css/style.css
@@ -33,13 +33,13 @@ h1, h2, h3, p {
     text-align: center;
 }
 
-.intro, footer {
+#intro, footer {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.intro {
+#intro {
     padding: 150px 400px;
     background-image: url(../images/banner.jpg);
     background-size: cover;
@@ -49,11 +49,11 @@ h1 {
     font-size: 3rem;
 }
 
-.intro p {
+#intro p {
     margin-top: 20px;
 }
 
-.intro a {
+#intro a {
     background-color: #f04c2f;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
@@ -65,76 +65,76 @@ h1 {
     margin: 40px 0;
 }
 
-.info {
+#info {
     padding: 150px 190px;
     display: flex;
     justify-content: space-around;
 }
 
-.contenuto {
+#contenuto {
     display: flex;
 }
 
-.foto {
+#foto {
     width: 50%;
 }
 
-.info img {
+#info img {
     height: 100%;
     border-radius: 100%;
     margin-top: 30px;
 }
 
-.testi {
+#testi {
     width: 50%;
 }
 
-.info h3 {
+#info h3 {
     margin-top: 30px;
     text-align: start;
 }
 
-.info p {
+#info p {
     margin-top: 10px;
     text-align: start;
 }
 
-.testimonianze {
+#testimonianze {
     background-color: #e22d0e;
     padding: 100px;
 }
 
-.testimonianze h2 {
+#testimonianze h2 {
     color: white;
     font-size: 2.5rem;
     margin-bottom: 40px;
 }
 
-.testimonianze blockquote, .testimonianze figcaption, .testimonianze p {
+#testimonianze blockquote, #testimonianze figcaption, #testimonianze p {
     color: white;
     text-align: center;
 }
 
-.testimonianze blockquote {
+#testimonianze blockquote {
     font-style: italic;
     margin-bottom: 30px;
 }
 
-.testimonianze figcaption {
+#testimonianze figcaption {
     font-size: 1.4rem;
 }
 
-.testimonianze p {
+#testimonianze p {
     font-size: 1rem;
 }
 
-.cards {
+#cards {
     padding: 100px 0;
     display: flex;
     justify-content: space-around;
 }
 
-.cards div {
+#cards div {
     width: 28%;
     border: 1px solid #dee1e3;
     border-bottom-left-radius: 10px;
@@ -143,11 +143,11 @@ h1 {
     padding-bottom: 30px;
 }
 
-.cards h3, .cards p {
+#cards h3, #cards p {
     margin: 10px 20px 0 20px;
 }
 
-.cards img {
+#cards img {
     width: 100%;
     height: 251px;
 }
@@ -174,10 +174,6 @@ footer address {
 footer i {
     color: white;
 }
-
-/* footer address a {
-    text-align: start;
-} */
 
 footer a, footer p {
     color: #c8e7f0;
