--- a/m1/s1/g2/css/style.css
+++ b/m1/s1/g2/css/style.css
@@ -126,9 +126,8 @@ section {
     font-size: 10px;
 }
 
-.description h2:hover {
+.description:hover h2, .description:hover h3, .description:hover p {
     color: orange;
-    cursor: pointer;
 }
 
 .likes {
