--- a/m1/s3/g4/css/style.css
+++ b/m1/s3/g4/css/style.css
@@ -18,7 +18,7 @@ body {
 .tombola {
     padding-top: 10px;
     width: 50%;
-    background-color: #333333;
+    background-color: crimson;
 }
 
 h1 {
@@ -53,7 +53,7 @@ h1 {
     padding: 5px;
     border-radius: 5px;
     font-weight: bold;
-    background-color: #4CAF50;
+    background-color: dodgerblue;
     color: white;
     border: 1px solid white;
 }
@@ -151,7 +151,7 @@ h1 {
     border-right: 1px solid black;
 }
 
-.cartella .div2 .div.estratto {
+.cartella .div2 .estratto {
     background-color: #00ff00;
     color: white;
 }
