--- a/m2/s1/g4/start1/postit.css
+++ b/m2/s1/g4/start1/postit.css
@@ -47,6 +47,32 @@ body {
     align-items: center;
     box-shadow: 5px 5px 5px rgb(37, 37, 37);
     transition: all 0.5s;
+    animation-name: introduzione;
+    animation-iteration-count: 1;
+    animation-duration: 2s;
+}
+
+@media screen and (max-width: 940px) {
+    .postit {
+        flex-basis: 32%;
+    }
+}
+
+@media screen and (max-width: 620px) {
+    .postit {
+        flex-basis: 49%;
+    }
+}
+
+@media screen and (max-width: 330px) {
+    .postit {
+        flex-basis: 100%;
+    }
+}
+
+@keyframes introduzione {
+    from {opacity: 0; transform: scale(10);}
+    to {opacity: 1; transform: scale(1);}
 }
 
 .postit:hover {
