--- a/m2/s1/progetto/assets/css/style.css
+++ b/m2/s1/progetto/assets/css/style.css
@@ -200,7 +200,7 @@ header nav button {
 
 /* MAIN */
 #trending {
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid rgb(220, 220, 220);
     padding: 45px 60px;
 }
 
@@ -400,6 +400,12 @@ header nav button {
     flex-basis: 33.6%;
 }
 
+@media screen and (max-width: 1288px) {
+    #flex-container2 #posts .post-text2 {
+        font-size: 0.9rem;
+    }
+}
+
 @media screen and (max-width: 1079px) {
     #flex-container2 #posts {
         flex-basis: 65%;
@@ -434,6 +440,10 @@ header nav button {
     #posts .post > img {
         width: 150px;
         height: auto;
+    }
+
+    #posts .post .post-container .post-text2 {
+        display: none;
     }
 }
 
@@ -490,10 +500,100 @@ aside #aside-footer {
     flex-wrap: wrap;
     row-gap: 15px;
     column-gap: 28px;
+    margin-bottom: 50px;
 }
 
 aside #aside-footer a {
     text-decoration: none;
     color: #666666;
     font-size: 0.9rem;
+}
+
+/* FOOTER */
+footer {
+    background-color: black;
+    padding: 20px 60px;
+    display: none;
+}
+
+footer img {
+    filter: invert(100%);
+    margin-bottom: 20px;
+}
+
+footer nav ul {
+    display: flex;
+    column-gap: 15px;
+}
+
+footer nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 0.8rem;
+}
+
+.footer-line {
+    height: 0.5px;
+    background-color: white;
+    margin-top: 30px;
+    display: none;
+}
+
+footer .container > p {
+    color: white;
+    margin-top: 20px;
+    display: none;
+}
+
+footer .google, footer .apple {
+    color: white;
+    font-size: 2rem;
+    margin-right: 5px;
+}
+
+footer #store {
+    column-gap: 10px;
+    display: none;
+}
+
+footer #google-play-div, #app-store-div {
+    display: flex;
+    border: 1px solid white;
+    border-radius: 5px;
+    margin-top: 20px;
+    padding: 10px;
+}
+
+footer #google-play-div p, #app-store-div p {
+    color: white;
+    display: block;
+}
+
+#p1, #p2 {
+    font-size: 0.7rem;
+}
+
+@media screen and (max-width: 903px) {
+    footer {
+        padding: 20px 50px;
+        display: block;
+    }
+}
+
+@media screen and (max-width: 727px) {
+    footer {
+        padding: 20px 30px;
+    }
+
+    .footer-line {
+        display: block;
+    }
+    
+    footer .container > p {
+        display: block;
+    }
+
+    footer #store {
+        display: flex;
+    }
 }
