--- a/m2/s1/progetto/assets/css/style.css
+++ b/m2/s1/progetto/assets/css/style.css
@@ -25,6 +25,10 @@ body {
     transition: background-color 0.5s;
 }
 
+.transition-display {
+    transition: display 0.5s;
+}
+
 /* MAIN */
 .container {
     max-width: 1190px;
@@ -78,6 +82,7 @@ header nav button {
     border-radius: 50px;
     font-weight: 700;
     vertical-align: middle;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 903px) {
@@ -134,6 +139,7 @@ header nav button {
     border: none;
     border-radius: 50px;
     font-size: 1.2rem;
+    cursor: pointer;
 }
 
 #hero-section #svg-container {
@@ -595,5 +601,93 @@ footer #google-play-div p, #app-store-div p {
 
     footer #store {
         display: flex;
+    }
+}
+
+/* POPUP */
+#popup {
+    position: fixed;
+    height: 100%;
+    width: 680px;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: white;
+    z-index: 3;
+    padding: 100px 0;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+}
+
+#popup h3 {
+    font-family: 'Spectral', serif;
+    font-size: 2rem;
+}
+
+#popup nav ul {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#popup nav ul li {
+    height: 40px;
+    width: 300px;
+    border: 1px solid var(--black);
+    margin: 15px;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#popup ul li a {
+    text-decoration: none;
+    color: var(--black);
+}
+
+#sign-in a {
+    color: var(--green);
+    text-decoration: none;
+}
+
+#popup #sign-up {
+    width: 450px;
+    display: block;
+    margin: 0 auto;
+    font-size: 0.8rem;
+    line-height: 20px;
+}
+
+#popup #sign-up a {
+    color: var(--black);
+}
+
+#popup #close {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 2rem;
+    transform: rotate(45deg);
+    cursor: pointer;
+}
+
+#panel {
+    z-index: 2;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(255, 255, 255, 0.9);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+}
+
+@media screen and (max-width: 680px) {
+    #popup {
+        width: 100%;
     }
 }
