--- a/m2/s1/progetto/assets/css/style.css
+++ b/m2/s1/progetto/assets/css/style.css
@@ -538,6 +538,10 @@ footer nav ul li a {
     font-size: 0.8rem;
 }
 
+footer nav ul li a:hover {
+    text-decoration: underline;
+}
+
 .footer-line {
     height: 0.5px;
     background-color: white;
@@ -560,6 +564,10 @@ footer .google, footer .apple {
 footer #store {
     column-gap: 10px;
     display: none;
+}
+
+footer #store div:hover {
+    cursor: pointer;
 }
 
 footer #google-play-div, #app-store-div {
@@ -652,6 +660,10 @@ footer #google-play-div p, #app-store-div p {
 #sign-in a {
     color: var(--green);
     text-decoration: none;
+}
+
+#sign-in a:hover {
+    text-decoration: underline;
 }
 
 #popup #sign-up {
