--- a/m2/s1/progetto/assets/css/style.css
+++ b/m2/s1/progetto/assets/css/style.css
@@ -473,7 +473,7 @@ header nav button {
 /* ASIDE */
 aside {
     position: sticky;
-    top: 155px;
+    top: 150px;
     max-height: 500px;
 }
 
@@ -723,10 +723,12 @@ footer #google-play-div p, #app-store-div p {
     cursor: pointer;
 }
 
+#trending .trending-post .post-info .author p, #posts .post .post-container .post-author p {
+    position: relative;
+}
+
 #hover-card {
     position: absolute;
-    left: 0;
-    bottom: -20px;
     background-color: white;
     height: 160px;
     width: 300px;
@@ -734,6 +736,10 @@ footer #google-play-div p, #app-store-div p {
     font-size: 0.9rem;
     border-radius: 5px;
     box-shadow: 0 0 10px rgb(148, 148, 148);
+    left: 90px;
+    bottom: -70px;
+    z-index: 2;
+    cursor: default;
 }
 
 #hover-card #pointer {
@@ -767,6 +773,10 @@ footer #google-play-div p, #app-store-div p {
     margin-bottom: 10px;
 }
 
+#flex-container2 #hover-card #hover-author-info {
+    margin-bottom: 20px;
+}
+
 #hover-card img {
     border-radius: 100%;
 }
@@ -779,6 +789,10 @@ footer #google-play-div p, #app-store-div p {
     margin-top: 20px;
     height: 0.5px;
     background-color: var(--black);
+}
+
+#flex-container2 #hover-card #hover-line {
+    margin-top: 25px;
 }
 
 #hover-card #hover-author-social-info {
@@ -800,3 +814,9 @@ footer #google-play-div p, #app-store-div p {
     color: white;
     border-radius: 50px;
 }
+
+/* @media screen and (max-width: 1400px) {
+    #hover-card {
+        display: none;
+    }
+} */
