decommentato una parte di cui mi ero dimenticato

--- a/m2/s1/progetto/assets/css/style.css
+++ b/m2/s1/progetto/assets/css/style.css
@@ -875,8 +875,8 @@ footer #google-play-div #p2 {
     border-radius: 50px;
 }
 
-/* @media screen and (max-width: 1400px) {
+@media screen and (max-width: 1400px) {
     #hover-card {
         display: none;
     }
-} */
+}
