Ridimensionati font popup

--- a/m2/s1/progetto/assets/css/style.css
+++ b/m2/s1/progetto/assets/css/style.css
@@ -729,6 +729,7 @@ footer #google-play-div #p2 {
 #popup ul li a {
     text-decoration: none;
     color: var(--black);
+    font-size: 0.9rem;
 }
 
 #sign-in a {
