--- a/m2/s2/g2/assets/css/style.css
+++ b/m2/s2/g2/assets/css/style.css
@@ -1,3 +1,55 @@
-div.hidden {
-    display: none;
+main section h1 {
+    width: 100%;
+    border-bottom: 1px solid #657075;
+    font-weight: 400;
+    color: #657075;
+    font-size: 4rem;
+}
+
+main section h1 span {
+    font-size: 2rem;
+    margin-bottom: -5px;
+    margin-left: 5px;
+}
+
+main section p i {
+    font-size: 1.5rem;
+    color: #657075;
+}
+
+@media screen and (max-width: 767px) {
+    #div1 {
+        font-size: 2rem;
+    }
+
+    #div2 {
+        font-size: 1rem;
+    }
+
+    main section p i {
+        font-size: 1rem;
+    }
+
+    .hot {
+        font-size: 0.8rem;
+    }
+}
+
+.p1 {
+    font-size: 2rem;
+}
+
+code {
+    font-size: 1.2rem;
+    color: #657075;
+}
+
+.p2 {
+    font-size: 1.5rem;
+    color: #3b3e3e;
+}
+
+#best-offer {
+    border-radius: 50px;
+    padding: 5px;
 }
