--- a/m2/s2/progetto/assets/scss/_variables.scss
+++ b/m2/s2/progetto/assets/scss/_variables.scss
@@ -37,6 +37,7 @@ $grays: (
 
 // scss-docs-start color-variables
 $blue:    #141414 !default;
+$grey: rgb(153, 153, 153);
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #d63384 !default;
