manca da sistemare la modifica dei prodotti

--- a/m2/s3/progetto/assets/scss/style.scss
+++ b/m2/s3/progetto/assets/scss/style.scss
@@ -77,9 +77,10 @@ main{
 }
 
 .my-alert{
-    left: 5px;
     right: 5px;
     bottom: 10px;
+    @media screen and (min-width: 200px){
+    }
 }
 
 .success-message{
