--- a/m2/s3/progetto/assets/scss/style.scss
+++ b/m2/s3/progetto/assets/scss/style.scss
@@ -77,10 +77,9 @@ main{
 }
 
 .my-alert{
-    right: 5px;
+    right: 5px !important;
     bottom: 10px;
-    @media screen and (min-width: 200px){
-    }
+    margin-left: 5px;
 }
 
 .success-message{
